--- a/README
+++ b/README
@@ -1,8 +1,10 @@
+# Purpose
+
 Materials used by the Perl events group on various Perl and non-Perl events.
 See http://www.perlfoundation.org/perl5/index.cgi?events
 for details
 
-
+# Inspiration
 
 Some idea of format from the PostgreSQL people:
 http://pgfoundry.org/docman/?group_id=1000047
