Add URL to Git repos

--- a/README
+++ b/README
@@ -8,3 +8,9 @@ for details
 
 Some idea of format from the PostgreSQL people:
 http://pgfoundry.org/docman/?group_id=1000047
+
+# Git Repository
+
+The autoritative version of these files can be found here:
+
+   http://github.com/szabgab/perl-promotion
